<resources>
    <string name="app_name">Blanja</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_liked">Disukai</string>
    <string name="menu_promo">Promo</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_account">Akun</string>

    <string name="home_question">Mau belanja apa hari ini?</string>
    <string name="product_detail_desc">Apple MacBook Pro MD101 Silver Notebook merupakan MacBook Pro berukuran 13.3 inch dengan resolusi 1280 x 800 piksel.\n\n
Notebook ini juga dilengkapi thunderbolt port, kamera, serta ditunjang kartu graphics Intel HD Graphics 4000 yang memberikan Anda kenyamanan dalam menikmati hiburan multimedia seperti menonton film dan bermain game.</string>
</resources>